# research-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  __main__.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
agent/: llm_client.py  orchestrator.py  state.py
config/: settings.py
docs/: 01-concepts.md  02-architecture.md  03-setup.md  04-agent-state.md  05-llm-client.md  06-tools.md  07-registry.md  08-orchestrator.md  09-testing.md  10-add-tool.md  README.md  common-diagram.md
docs/assets/javascripts/: mermaid-panzoom.js
docs/assets/stylesheets/: docs.css
tests/: conftest.py  test_agent.py  test_tools.py
tools/: fetch.py  registry.py  report.py  search.py  summarize.py
ui/: display.py
